RESOLVED FIXED162466
ASSERTION FAILED: !newRelayoutRoot.container() || is<RenderView>(newRelayoutRoot.container()) || !newRelayoutRoot.container()->needsLayout() while loading sohu.com
https://bugs.webkit.org/show_bug.cgi?id=162466
Summary ASSERTION FAILED: !newRelayoutRoot.container() || is<RenderView>(newRelayoutR...
alan
Reported 2016-09-22 14:48:21 PDT
1. Load sohu.com in debug build. 1 com.apple.JavaScriptCore 0x01194734 WTFCrash + 36 (Assertions.cpp:323) > 2 com.apple.WebCore 0x00ac9ef7 WebCore::FrameView::scheduleRelayoutOfSubtree(WebCore::RenderElement&) + 487 (FrameView.cpp:2729) 3 com.apple.WebCore 0x01f078b9 WebCore::scheduleRelayoutForSubtree(WebCore::RenderElement&) + 121 (RenderObject.cpp:457) 4 com.apple.WebCore 0x01f076c5 WebCore::RenderObject::markContainingBlocksForLayout(WebCore::ScheduleRelayout, WebCore::RenderElement*) + 1093 (RenderObject.cpp:514) 5 com.apple.WebCore 0x0006ecb9 WebCore::RenderObject::setNeedsLayout(WebCore::MarkingBehavior) + 169 (RenderObject.h:1051) 6 com.apple.WebCore 0x0071f45e WebCore::RenderObject::setNeedsLayoutAndPrefWidthsRecalc() + 30 (RenderObject.h:537) 7 com.apple.WebCore 0x01db18de WebCore::RenderElement::removeChildInternal(WebCore::RenderObject&, WebCore::RenderElement::NotifyChildrenType) + 286 (RenderElement.cpp:608) 8 com.apple.WebCore 0x01db17af WebCore::RenderElement::removeChild(WebCore::RenderObject&) + 31 (RenderElement.cpp:522) 9 com.apple.WebCore 0x01cd5253 WebCore::RenderBlock::removeChild(WebCore::RenderObject&) + 995 (RenderBlock.cpp:891) 10 com.apple.WebCore 0x01d29fba WebCore::RenderBlockFlow::removeChild(WebCore::RenderObject&) + 122 (RenderBlockFlow.cpp:3890) 11 com.apple.WebCore 0x01f064d4 WebCore::RenderObject::removeFromParent() + 68 (RenderObject.cpp:198) 12 com.apple.WebCore 0x01f0b81d WebCore::RenderObject::willBeDestroyed() + 93 (RenderObject.cpp:1397) 13 com.apple.WebCore 0x01db3f2f WebCore::RenderElement::willBeDestroyed() + 95 (RenderElement.cpp:1125) 14 com.apple.WebCore 0x01d7d63a WebCore::RenderBoxModelObject::willBeDestroyed() + 170 (RenderBoxModelObject.cpp:195) 15 com.apple.WebCore 0x01f1b2c3 WebCore::RenderReplaced::willBeDestroyed() + 115 (RenderReplaced.cpp:80) 16 com.apple.WebCore 0x01f0bcc0 WebCore::RenderObject::destroy() + 64 (RenderObject.cpp:1475) 17 com.apple.WebCore 0x01f0bc73 WebCore::RenderObject::destroyAndCleanupAnonymousWrappers() + 387 (RenderObject.cpp:1463) 18 com.apple.WebCore 0x02041a98 WebCore::RenderTreeUpdater::tearDownRenderers(WebCore::Element&, WebCore::RenderTreeUpdater::TeardownType)::$_1::operator()(unsigned int) const + 136 (RenderTreeUpdater.cpp:558) 19 com.apple.WebCore 0x0203fab5 WebCore::RenderTreeUpdater::tearDownRenderers(WebCore::Element&, WebCore::RenderTreeUpdater::TeardownType) + 229 (RenderTreeUpdater.cpp:570) 20 com.apple.WebCore 0x0203ebe4 WebCore::RenderTreeUpdater::updateElementRenderer(WebCore::Element&, WebCore::Style::ElementUpdate&) + 180 (RenderTreeUpdater.cpp:270) 21 com.apple.WebCore 0x0203e683 WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) + 787 (RenderTreeUpdater.cpp:175) 22 com.apple.WebCore 0x0203e085 WebCore::RenderTreeUpdater::commit(std::__1::unique_ptr<WebCore::Style::Update, std::__1::default_delete<WebCore::Style::Update> >) + 853 (RenderTreeUpdater.cpp:120) 23 com.apple.WebCore 0x007134f4 WebCore::Document::recalcStyle(WebCore::Style::Change) + 1524 (Document.cpp:1918) 24 com.apple.WebCore 0x00705afd WebCore::Document::updateStyleIfNeeded() + 301 (Document.cpp:1965) 25 com.apple.WebCore 0x007471eb void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (WebCore::Document::*&)(), WebCore::Document*>&>(std::__1::__bind<void (WebCore::Document::*&)(), WebCore::Document*>&&&) + 235 (__functional_base:469) 26 com.apple.WebCore 0x007470d9 std::__1::__function::__func<std::__1::__bind<void (WebCore::Document::*&)(), WebCore::Document*>, std::__1::allocator<std::__1::__bind<void (WebCore::Document::*&)(), WebCore::Document*> >, void ()>::operator()() + 41 (functional:1437) 27 com.apple.WebCore 0x0005a84a std::__1::function<void ()>::operator()() const + 26 (functional:1817) 28 com.apple.WebCore 0x0005a769 WebCore::Timer::fired() + 25 (Timer.h:142) 29 com.apple.WebCore 0x025d09ba WebCore::ThreadTimers::sharedTimerFiredInternal() + 394 (ThreadTimers.cpp:124) 30 com.apple.WebCore 0x025d1be1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const + 33 (ThreadTimers.cpp:73) 31 com.apple.WebCore 0x025d1bad void std::__1::__invoke_void_return_wrapper<void>::__call<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0&>(WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0&&&) + 45 (__functional_base:469) 32 com.apple.WebCore 0x025d1b59 std::__1::__function::__func<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, std::__1::allocator<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0>, void ()>::operator()() + 41 (functional:1437) 33 com.apple.WebCore 0x0005a84a std::__1::function<void ()>::operator()() const + 26 (functional:1817) 34 com.apple.WebCore 0x0195db08 WebCore::MainThreadSharedTimer::fired() + 104 (MainThreadSharedTimer.cpp:53) 35 com.apple.WebCore 0x0195de89 WebCore::timerFired(__CFRunLoopTimer*, void*) + 41 (MainThreadSharedTimerCF.cpp:74) 36 com.apple.CoreFoundation 0x0008df44 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 (/Library/Caches/com.apple.xbs/Sources/CF/CF-1348.1/RunLoop.subproj/CFRunLoop.c:1810) 37 com.apple.CoreFoundation 0x0008dbd3 __CFRunLoopDoTimer + 1075 (/Library/Caches/com.apple.xbs/Sources/CF/CF-1348.1/RunLoop.subproj/CFRunLoop.c:2349) 38 com.apple.CoreFoundation 0x0008d72a __CFRunLoopDoTimers + 298 (/Library/Caches/com.apple.xbs/Sources/CF/CF-1348.1/RunLoop.subproj/CFRunLoop.c:2488) 39 com.apple.CoreFoundation 0x000852f1 __CFRunLoopRun + 2081 (/Library/Caches/com.apple.xbs/Sources/CF/CF-1348.1/RunLoop.subproj/CFRunLoop.c:2984) 40 com.apple.CoreFoundation 0x00084874 CFRunLoopRunSpecific + 420 (/Library/Caches/com.apple.xbs/Sources/CF/CF-1348.1/RunLoop.subproj/CFRunLoop.c:3113) 41 com.apple.HIToolbox 0x00030f6c RunCurrentEventLoopInMode + 240 (Events/EventsCore/EventLoop.c:440) 42 com.apple.HIToolbox 0x00030da1 ReceiveNextEventCommon + 432 (/BuildRoot/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.Internal.sdk/usr/include/dispatch/once.h:77) 43 com.apple.HIToolbox 0x00030bd6 _BlockUntilNextEventMatchingListInModeWithFilter + 71 (Events/EventsCore/EventBlocking.c:161) 44 com.apple.AppKit 0x000475f5 _DPSNextEvent + 1093 (/Library/Caches/com.apple.xbs/Sources/AppKit/AppKit-1504/GraphicsContext.subproj/CGDPSReplacement.m:710) 45 com.apple.AppKit 0x007578eb -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1637 (/Library/Caches/com.apple.xbs/Sources/AppKit/AppKit-1504/Events.subproj/appEventRouting.m:1306) 46 com.apple.AppKit 0x0003bfbd -[NSApplication run] + 926 (/Library/Caches/com.apple.xbs/Sources/AppKit/AppKit-1504/AppKit.subproj/NSApplication.m:3651) 47 com.apple.AppKit 0x00006a8a NSApplicationMain + 1237 (/Library/Caches/com.apple.xbs/Sources/AppKit/AppKit-1504/AppKit.subproj/NSApplication.m:8995) 48 libxpc.dylib 0x000108b3 _xpc_objc_main + 775 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/libxpc/libxpc-972.1.5/src/main.m:162) 49 libxpc.dylib 0x0000f2d0 xpc_main + 494 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/libxpc/libxpc-972.1.5/src/init.c:1447) 50 com.apple.WebKit.WebContent 0x0000118d main + 797 (XPCServiceMain.mm:130) 51 libdyld.dylib 0x00005255 start + 1
Attachments
Patch (2.13 KB, patch)
2016-09-22 14:50 PDT, alan
no flags
Archive of layout-test-results from ews117 for mac-yosemite (1.83 MB, application/zip)
2016-09-22 16:07 PDT, Build Bot
no flags
Patch (4.94 KB, patch)
2016-09-22 21:28 PDT, alan
no flags
Patch (5.64 KB, patch)
2016-09-23 16:27 PDT, alan
no flags
alan
Comment 1 2016-09-22 14:49:18 PDT
alan
Comment 2 2016-09-22 14:50:33 PDT
alan
Comment 3 2016-09-22 14:51:42 PDT
Testing with EWS while trying to put together a test case.
Build Bot
Comment 4 2016-09-22 16:07:14 PDT
Comment on attachment 289608 [details] Patch Attachment 289608 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2128125 New failing tests: mathml/presentation/tables-columnalign.html imported/blink/fast/dynamic/static-to-relative-with-absolute-child.html mathml/presentation/tables-spans.html mathml/presentation/tables-simple.html
Build Bot
Comment 5 2016-09-22 16:07:17 PDT
Created attachment 289624 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
alan
Comment 6 2016-09-22 21:28:04 PDT
alan
Comment 7 2016-09-23 16:27:34 PDT
WebKit Commit Bot
Comment 8 2016-09-23 17:48:05 PDT
Comment on attachment 289718 [details] Patch Clearing flags on attachment: 289718 Committed r206343: <http://trac.webkit.org/changeset/206343>
WebKit Commit Bot
Comment 9 2016-09-23 17:48:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.